- TurCommonsUtils.getKeyValueFromColon and AEM - cq:template